# homework

./: .env  README.md  docker-compose.yml  package-lock.json  prompts.txt
client/: package-lock.json  package.json  structure.txt
client/.next/: build-manifest.json  prerender-manifest.json  trace
client/.next/cache/: .rscinfo
client/.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
client/.next/server/pages/: _app.js  _error.js  create.js  index.js
client/.next/server/pages/vote/: [id].js
client/.next/server/vendor-chunks/: @swc.js  next.js
client/.next/static/chunks/: _error.js  react-refresh.js  webpack.js
client/.next/static/chunks/pages/: _app.js  create.js  index.js
client/.next/static/chunks/pages/vote/: [id].js
client/.next/static/development/: _buildManifest.js
client/.next/static/webpack/: webpack.440aaf1d17a09071.hot-update.js  webpack.55784b1c45bbf192.hot-update.js  webpack.902174b23992fc95.hot-update.js
client/pages/: _app.tsx  create.tsx  index.tsx
client/pages/vote/[id]/: index.tsx
client/src/: services.ts
client/styles/: global.css
server/: .env  dockerfile  main.py  pyproject.toml
server/model/: model.py
server/routes/: ping.py  poll.py  vote.py
server/schemas/: poll.py  votes.py
test/: main.py
